# StockInsight

./: .coverage  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  AGENTS.md  A股散户实战手法大全.docx  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alerts.json  backfill_history.py  cli.py  conftest.py  docker-compose.yml  eslint.config.js  feishu_push.py  final_picks.txt  final_top10_longterm.csv  gen_docx_report.py  index.html  mainboard_owned_20260528.json  mainboard_owned_20260530.json  ml_scan.py  overview-ci-fix-sprint.md  package-lock.json  package.json  pick5_mainboard.py  pick5_today.py  pyproject.toml  rational_10.py  requirements.txt  ruff.toml  run_daily.py  run_full_scan.py  start_tauri.bat  (+6 more)
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  security-scan.yml  stockinsight-ci.yml
backend/: cache.py  common.py  db.py  exceptions.py  logging_config.py  main.py  scan_progress.py
backend/routers/: analysis.py  data_jobs.py  data_management.py  factors.py  market.py  portfolio.py  scan.py
backend/schemas/: requests.py  responses.py
backend/services/: __init__.py  analysis_service.py  data_service.py  market_service.py  portfolio_service.py  scan_service.py
backend/tests/: conftest.py  test_analysis_service.py  test_api_integration.py  test_cache.py  test_common.py  test_db.py  test_exceptions.py  test_logging.py  test_main_rate_limit.py  test_scan_progress.py
docs/adr/: ADR-001-exception-logging-strategy.md
docs/api/: overview.md
docs/architecture/: overview.md
docs/how-to/: run-and-test.md
docs/overview/: README.md
docs/security/: README.md
docs/superpowers/plans/: 2026-05-23-stock-analysis-full-chain-plan.md
docs/superpowers/specs/: 2026-05-23-stock-analysis-full-chain-design.md
portfolios/: test_ci_portfolio_tmp.json  test_update_tmp.json  全链路精选组合.json  测试组合.json
scripts/: check-commit-msg.py  generate_api_docs.py  load_test.js
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs  sidecar.rs  tray.rs
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  IndicatorChart.test.tsx  IndicatorChart.tsx  KlineChart.test.tsx  KlineChart.tsx  StockQuote.test.tsx  StockQuote.tsx
src/hooks/: useApi.test.ts  useApi.ts
src/pages/: Dashboard.test.tsx  Dashboard.tsx  Portfolio.test.tsx  Portfolio.tsx  Settings.test.tsx  Settings.tsx  StockAnalysis.test.tsx  StockAnalysis.tsx
src/pages/stock-analysis/: BusinessQualitySection.test.tsx  BusinessQualitySection.tsx  CombinedSection.test.tsx  CombinedSection.tsx  CoreDataSection.test.tsx  CoreDataSection.tsx  DataSourcesSection.test.tsx  DataSourcesSection.tsx  ManipulatorSection.test.tsx  ManipulatorSection.tsx  MarketIndicesSection.test.tsx  MarketIndicesSection.tsx  OperationSection.test.tsx  OperationSection.tsx  PatternSection.test.tsx  PatternSection.tsx  PredictionSection.test.tsx  PredictionSection.tsx  PsychologySection.test.tsx  PsychologySection.tsx  RiskSection.test.tsx  RiskSection.tsx  ScoreCircle.test.tsx  ScoreCircle.tsx  SectorSection.test.tsx  SectorSection.tsx
src/store/: index.test.ts  index.ts
src/styles/: global.css
src/types/: api.ts
stock_analyzer/: __init__.py  advanced.py  alert.py  analysis.py  analyzer.py  backtest.py  baostock_daily.py  build_concept_db.py  build_sector_db.py  business_quality.py  cache.py  chip_concentration.py  chip_factors.py  config.py  custom_factors.py  daily_basic.py  daily_history_by_date.py  data_sources.py  enhanced_screener.py  env.py  feishu_bot.py  history_db.py  logging_config.py  ml_predict.py  network_health.py  nl_report.py  overnight_holding.py  patterns.py  portfolio.py  psychology.py  quant.py  report_cards.py  report_generators.py  report_html.py  report_html_utils.py  report_narratives.py  report_sections.py  report_templates.py  reporter.py  resilience.py  (+36 more)
stock_analyzer/fetcher/: __init__.py
stock_analyzer/tests/: test_alert.py  test_analysis.py  test_analyzer.py  test_backtest.py  test_baostock_daily.py  test_build_concept_db.py  test_build_sector_db.py  test_business_quality.py  test_cache.py  test_chip_concentration.py  test_chip_factors.py  test_config.py  test_custom_factors.py  test_daily_basic.py  test_daily_history_by_date.py  test_data_sources.py  test_enhanced_screener.py  test_env.py  test_feishu_bot.py  test_history_db.py  test_logging_config.py  test_ml_predict.py  test_network_health.py  test_nl_report.py  test_overnight_holding.py  test_patterns.py  test_portfolio.py  test_psychology.py  test_quant.py  test_reporter.py  test_resilience.py  test_screener.py  test_sector_info.py  test_sector_report.py  test_sectors_fallback.py  test_self_audit.py  test_short_term.py  test_trade_calendar.py  test_tushare_loader.py  test_ultimate_report.py
