[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stockinsight"
version = "2.0.0"
description = "StockInsight Pro — A股智能选股与量化分析系统（全栈：FastAPI + React + Tauri）"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "scipy>=1.10",
    "akshare>=1.14",
    "baostock>=0.8",
    "tushare>=1.4",
    "pywencai>=0.1",
    "python-docx>=1.1",
    "openpyxl>=3.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "pyarrow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.0",
    "bandit>=1.7",
    "pre-commit>=3.0",
]

[tool.mypy]
python_version = "3.11"
# 渐进式类型检查——当前为宽松模式，逐步收紧
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "stock_analyzer.*",
    "backend.routers.*",
]
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.ruff]
# Ruff config is in ruff.toml — this section ensures pyproject.toml compatibility
