[package]
name = "stockinsight-pro"
version = "1.0.0"
description = "StockInsight Pro — A股量化分析桌面端"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["process", "time", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
